--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 androidExtensions {
     experimental = true
@@ -42,4 +43,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // Kotlin
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
