--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,17 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
-    //
+    // Lifecycle
     implementation "android.arch.lifecycle:extensions:1.1.1"
     // Constraint layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
     // Multidex
     implementation 'com.android.support:multidex:1.0.3'
+    // Timber
+    implementation 'com.github.ajalt:timberkt:1.5.1'
 }
