--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     // Multidex
     implementation 'com.android.support:multidex:1.0.3'
     // Timber
