--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
+    // Anko
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
     // Lifecycle
     implementation "android.arch.lifecycle:extensions:1.1.1"
     // Constraint layout
