--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,16 +39,19 @@ dependencies {
     implementation "com.android.support:cardview-v7:$support_version"
     // Anko
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
-    // Lifecycle
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'org.koin:koin-android-viewmodel:1.0.1'
     // Constraint layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-firestore:18.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    // Koin
+    implementation 'org.koin:koin-android:1.0.1'
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Lifecycle
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     // Timber
     implementation 'com.github.ajalt:timberkt:1.5.1'
 }
