--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "ru.geekbrains.geekkotlin"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "ru.geekbrains.geekkotlin.TestAppJUnitRunner"
     }
     buildTypes {
         release {
